<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/icon_login" />

        <EditText
            android:id="@+id/name"
            android:textSize="@dimen/edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_left_margin"
            android:layout_marginRight="@dimen/edit_right_margin"
            android:layout_marginTop="40dp"
            android:background="@drawable/username"
            android:hint="@string/txtDefaultName"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_bottom_padding"
            android:paddingLeft="@dimen/edit_left_padding"
            android:paddingRight="@dimen/edit_right_padding"
            android:paddingTop="@dimen/edit_top_padding"
            android:textColor="@android:color/white"
            android:textColorHint="#99ffffff" />

        <EditText
            android:id="@+id/username"
            android:textSize="@dimen/edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_left_margin"
            android:layout_marginRight="@dimen/edit_right_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/email"
            android:hint="@string/txtDefaultEmail"
            android:inputType="text"
            android:paddingBottom="@dimen/edit_bottom_padding"
            android:paddingLeft="@dimen/edit_left_padding"
            android:paddingRight="@dimen/edit_right_padding"
            android:paddingTop="@dimen/edit_top_padding"
            android:textColor="@android:color/white"
            android:textColorHint="#99ffffff" />

        <EditText
            android:id="@+id/password"
            android:textSize="@dimen/edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_left_margin"
            android:layout_marginRight="@dimen/edit_right_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/password"
            android:hint="@string/txtDefaultPswd"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/edit_bottom_padding"
            android:paddingLeft="@dimen/edit_left_padding"
            android:paddingRight="@dimen/edit_right_padding"
            android:paddingTop="@dimen/edit_top_padding"
            android:textColor="@android:color/white"
            android:textColorHint="#99ffffff" />

        <EditText
            android:id="@+id/phonenumber"
            android:textSize="@dimen/edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_left_margin"
            android:layout_marginRight="@dimen/edit_right_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/emergency_contact"
            android:hint="@string/txtPhoneNumber"
            android:inputType="phone"
            android:paddingBottom="@dimen/edit_bottom_padding"
            android:paddingLeft="@dimen/edit_left_padding"
            android:paddingRight="@dimen/edit_right_padding"
            android:paddingTop="@dimen/edit_top_padding"
            android:textColor="@android:color/white"
            android:textColorHint="#99ffffff" />

        <EditText
            android:id="@+id/emergnecycontact"
            android:textSize="@dimen/edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_left_margin"
            android:layout_marginRight="@dimen/edit_right_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/emergency_contact"
            android:hint="@string/txtemergencycontact"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/edit_bottom_padding"
            android:paddingLeft="@dimen/edit_left_padding"
            android:paddingRight="@dimen/edit_right_padding"
            android:paddingTop="@dimen/edit_top_padding"
            android:textColor="@android:color/white"
            android:textColorHint="#99ffffff" />

        <EditText
            android:id="@+id/bloodgroup"
            android:textSize="@dimen/edit_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_left_margin"
            android:layout_marginRight="@dimen/edit_right_margin"
            android:layout_marginTop="20dp"
            android:background="@drawable/blood_group"
            android:hint="@string/txtbloodgroup"
            android:inputType="textPassword"
            android:paddingBottom="@dimen/edit_bottom_padding"
            android:paddingLeft="@dimen/edit_left_padding"
            android:paddingRight="@dimen/edit_right_padding"
            android:paddingTop="@dimen/edit_top_padding"
            android:textColor="@android:color/white"
            android:textColorHint="#99ffffff" />

        <ImageButton
            android:id="@+id/btnRegisterMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@drawable/create_acc_btn"
            android:contentDescription="@string/app_name" />

        <ImageButton
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/app_name"
            android:padding="30dp"
            android:src="@drawable/login_text" />
    </LinearLayout>

</ScrollView>